{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 84,
  "lineage": "517a18e3-2483-c8c1-0195-241c76ad5c65",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210702",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lab1-8af32caf/zones/europe-west4-a/disks/qs-gcp-ams"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "qs-gcp-ams",
            "enable_display": false,
            "id": "projects/lab1-8af32caf/zones/europe-west4-a/instances/qs-gcp-ams",
            "instance_id": "4654309397324292076",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "_PFgiahl6Tg=",
            "name": "qs-gcp-ams",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lab1-8af32caf/global/networks/qs-gcp-ams",
                "network_ip": "10.2.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lab1-8af32caf/regions/europe-west4/subnetworks/qs-gcp-ams",
                "subnetwork_project": "lab1-8af32caf"
              }
            ],
            "project": "lab1-8af32caf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab1-8af32caf/zones/europe-west4-a/instances/qs-gcp-ams",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "data.google_project.this",
            "module.google_compute_subnetwork.google_compute_subnetwork.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924333798179:internet-gateway/igw-0ff2374ae4e407445",
            "id": "igw-0ff2374ae4e407445",
            "owner_id": "924333798179",
            "tags": {
              "Name": "qs-aws-fra"
            },
            "tags_all": {
              "Name": "qs-aws-fra"
            },
            "vpc_id": "vpc-0003321ce2ab82394"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924333798179:network-acl/acl-0ee37898a908e35b6",
            "egress": [],
            "id": "acl-0ee37898a908e35b6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "924333798179",
            "subnet_ids": [],
            "tags": {
              "Name": "qs-aws-fra"
            },
            "tags_all": {
              "Name": "qs-aws-fra"
            },
            "vpc_id": "vpc-0003321ce2ab82394"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_acl_rule",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3551165092",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ee37898a908e35b6",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network_acl.aws_network_acl.this",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924333798179:route-table/rtb-0b882aaec47723027",
            "id": "rtb-0b882aaec47723027",
            "owner_id": "924333798179",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff2374ae4e407445",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qs-aws-fra"
            },
            "tags_all": {
              "Name": "qs-aws-fra"
            },
            "vpc_id": "vpc-0003321ce2ab82394"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a9e3201c9f9d4e1",
            "route_table_id": "rtb-0b882aaec47723027",
            "subnet_id": "subnet-0b15d209df5507e7e"
          },
          "dependencies": [
            "module.aws_route_table.aws_route_table.this",
            "module.aws_subnet.aws_subnet.this",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_the_internet",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ff2374ae4e407445",
            "id": "r-rtb-0b882aaec477230271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b882aaec47723027",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.this",
            "module.aws_route_table.aws_route_table.this",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow_all",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924333798179:security-group/sg-004ace651b86dfc2d",
            "description": "allow_all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmpv6",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "id": "sg-004ace651b86dfc2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmpv6",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "924333798179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0003321ce2ab82394"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924333798179:subnet/subnet-0b15d209df5507e7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0b15d209df5507e7e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924333798179",
            "tags": {
              "Name": "qs-aws-fra-zone-00"
            },
            "tags_all": {
              "Name": "qs-aws-fra-zone-00"
            },
            "vpc_id": "vpc-0003321ce2ab82394"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924333798179:vpc/vpc-0003321ce2ab82394",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0053242d463590a87",
            "default_route_table_id": "rtb-0385c08e9cf58be36",
            "default_security_group_id": "sg-021ab743583d5afad",
            "dhcp_options_id": "dopt-dbe600b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "id": "vpc-0003321ce2ab82394",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0f91dfd54631fc876",
            "ipv6_cidr_block": "2a05:d014:1bb:ae00::/56",
            "main_route_table_id": "rtb-0385c08e9cf58be36",
            "owner_id": "924333798179",
            "tags": {
              "Name": "qs-aws-fra"
            },
            "tags_all": {
              "Name": "qs-aws-fra"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.google_compute_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/lab1-8af32caf/global/networks/qs-gcp-ams",
            "mtu": 0,
            "name": "qs-gcp-ams",
            "project": "lab1-8af32caf",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab1-8af32caf/global/networks/qs-gcp-ams"
          },
          "dependencies": [
            "data.google_project.this"
          ]
        }
      ]
    },
    {
      "module": "module.google_compute_subnetwork",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-07-11T14:19:00.305-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/lab1-8af32caf/regions/europe-west4/subnetworks/qs-gcp-ams",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "qs-gcp-ams",
            "network": "https://www.googleapis.com/compute/v1/projects/lab1-8af32caf/global/networks/qs-gcp-ams",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "lab1-8af32caf",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab1-8af32caf/regions/europe-west4/subnetworks/qs-gcp-ams"
          },
          "dependencies": [
            "data.google_project.this",
            "module.google_compute_network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bdbe51a2e8070ff2",
            "arn": "arn:aws:ec2:eu-central-1:924333798179:instance/i-002bd857ba3f556af",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002bd857ba3f556af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02170248bc40e47c5",
            "private_dns": "ip-10-1-1-37.eu-central-1.compute.internal",
            "private_ip": "10.1.1.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d61dbb7a18a87e93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0b15d209df5507e7e",
            "tags": {
              "Name": "qs-aws-fra"
            },
            "tags_all": {
              "Name": "qs-aws-fra"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-021ab743583d5afad"
            ]
          },
          "dependencies": [
            "data.aws_ami.this",
            "module.aws_subnet.aws_subnet.this",
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}